--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
  
+ <head>
+  <link rel="stylesheet" href="website.css">
+ </head> 
 <body>
   <h1>OoFALLENoO</h1>
   <p>Welcome to my website!</p>
