--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
+ <footer>
+  <h3> Conact us for more information </h3>
+ </footer> 
  
 </html>
