--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
  </head> 
 <body>
   <h1>OoFALLENoO</h1>
-  <p>Welcome to my website!</p>
+  <p>Welcome to my website! Enjoy some dancing ice cream!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  <footer>
-  <h3> Conact us for more information </h3>
+  <h3> Contact us for more information </h3>
  </footer> 
  
 </html>
