--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <h1>OoFALLENoO</h1>
   <p>Welcome to my website! Enjoy some dancing ice cream!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+ <p>This is a test website for my coding class.</p>
 </body>
  <footer>
   <h3> Contact us for more information </h3>
