--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
  <head>
   <link rel="stylesheet" href="website.css">
  </head> 
- <body>
+
+<body>
+  <h1>OoFALLENoO</h1>
+  <p>Welcome to my website! Enjoy some dancing ice cream!</p>
+  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+ <p>When you are done with your ice cream please take the survey below.</p>
+</body>
+ 
+  <body>
 <!-- as it is a survey form, we will need to submit the details, hence we use form -->
 <!-- We can give absolute url, or relative url like /nextpage.jsp, and specify POST or GET method -->
 <form action="http://google.co.in">
 <!-- If we remove this, every thing will move to the left of the page-->
 <div align="center">
 <!--Adds a heading to the form-->
-<h1>Employee Interests Survey form</h1>
+<h2>Employee Interests Survey form</h2>
 Enter your name:
 <!-- Input type text for small texts, specify size -->
 <input type="text" name="UserName" size=35 maxlength=35 value="">
@@ -50,12 +58,7 @@ What genre of movies do you like?
 </div>
 </form>
 </body>
-<body>
-  <h1>OoFALLENoO</h1>
-  <p>Welcome to my website! Enjoy some dancing ice cream!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
- <p>This is a test website for my coding class.</p>
-</body>
+ 
  <footer>
   <h3> Contact us for more information </h3>
  </footer> 
