--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ Enter your name:
 <!--Adds spaces - remove and see what happens -->
 </br></br>
 Enter your department:
-<input type="text" name="Deptt" size=35 maxlength=35 value=""> </br> </br>
-Tell us a little about yourself:
+<input type="text" name="Dept" size=35 maxlength=35 value=""> </br> </br>
+<h6>Tell us a little about yourself:</h6>
 <!-- For writing lot of text like descriptions with text wrapping,
 if you dont want text wrapping, you can add wrap = "off" (horizontal scrollbar -->
 <textarea name="Comments" cols=30 rows=4></textarea> </br> </br>
