--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
 #<div align="center">
 <!--Adds a heading to the form-->
 <h2>Employee Interests Survey form</h2>
-Enter your name:
+ <h6>Enter your name:</h6>
 <!-- Input type text for small texts, specify size -->
 <input type="text" name="UserName" size=35 maxlength=35 value="">
 <!--Adds spaces - remove and see what happens -->
 </br></br>
-Enter your department:
+   <h6>Enter your department:</h6>
 <input type="text" name="Dept" size=35 maxlength=35 value=""> </br> </br>
 <h6>Tell us a little about yourself:</h6>
 <!-- For writing lot of text like descriptions with text wrapping,
 if you dont want text wrapping, you can add wrap = "off" (horizontal scrollbar -->
 <textarea name="Comments" cols=30 rows=4></textarea> </br> </br>
-Do you exercise at home?
+<h6>Do you exercise at home?</h6>
 <!-- Radio buttons help you choose one out of the many values -->
 <input type="radio" name="exe" value=1>Yes
 <input type="radio" name="exe" value=2>No
 </p>
-How do you like to read about your favorite topics?
+<h6>How do you like to read about your favorite topics?</h6>
 <p>
 <!--Checkbox lets you select multiple options -->
 <input type="checkbox" name="Books">Books
@@ -43,7 +43,7 @@ How do you like to read about your favorite topics?
 <input type="checkbox" name="Phone">Phone apps
 <input type="checkbox" name="Magazines">Magazines
 </p>
-What genre of movies do you like?
+<h6>What genre of movies do you like?</h6>
 <!--Select box lets you choose one of the multiple dropdown options-->
 <select name="moviepref" ><option>
 <option value=1 selected = "true">comedy
