--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ if you dont want text wrapping, you can add wrap = "off" (horizontal scrollbar -
 <textarea name="Comments" cols=30 rows=4></textarea> </br> </br>
 <h6>Do you exercise at home?</h6>
 <!-- Radio buttons help you choose one out of the many values -->
-<input type="radio" name="exe" value=1>Yes
-<input type="radio" name="exe" value=2>No
+<input type="radio" name="exe" color="white" value=1>Yes
+<input type="radio" name="exe" color="white" value=2>No
 </p>
 <h6>How do you like to read about your favorite topics?</h6>
 <p>
