--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- We can give absolute url, or relative url like /nextpage.jsp, and specify POST or GET method -->
 <form action="http://google.co.in">
 <!-- If we remove this, every thing will move to the left of the page-->
-#<div align="center">
+<div align="center">
 <!--Adds a heading to the form-->
 <h2>Employee Interests Survey form</h2>
  <h6>Enter your name:</h6>
