--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <!-- If we remove this, every thing will move to the left of the page-->
 <div align="center">
 <!--Adds a heading to the form-->
-<h2>Employee Interests Survey form</h2>
+<h2>Interests Survey form</h2>
  <h6>Enter your name:</h6>
 <!-- Input type text for small texts, specify size -->
 <input type="text" name="UserName" size=35 maxlength=35 value="">
 <!--Adds spaces - remove and see what happens -->
 </br></br>
-   <h6>Enter your department:</h6>
+   <h6>Enter your occupation:</h6>
 <input type="text" name="Dept" size=35 maxlength=35 value=""> </br> </br>
 <h6>Tell us a little about yourself:</h6>
 <!-- For writing lot of text like descriptions with text wrapping,
@@ -51,6 +51,8 @@ if you dont want text wrapping, you can add wrap = "off" (horizontal scrollbar -
 <option value=3 >thriller
 <option value=4 >horror
 <option value=5 >biopic
+<option value=6 >action
+<option value=7 >drama 
 </select>
 </br></br>
 <!--submits the information entered in the form by the user -->
