--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>OoFALLENoO</h1>
   <p>Welcome to my website! Enjoy some dancing ice cream!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <img align="center" src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
  <p>When you are done with your ice cream please take the survey below.</p>
 </body>
  
@@ -26,7 +26,7 @@
 </br></br>
    <h4>Enter your occupation:</h4>
 <input type="text" name="Dept" size=35 maxlength=35 value=""> </br> </br>
-<h6>Tell us a little about yourself:</h6>
+<h4>Tell us a little about yourself:</h4>
 <!-- For writing lot of text like descriptions with text wrapping,
 if you dont want text wrapping, you can add wrap = "off" (horizontal scrollbar -->
 <textarea name="Comments" cols=30 rows=4></textarea> </br> </br>
