--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
   <h1>OoFALLENoO</h1>
   <p>Welcome to my website! Enjoy some dancing ice cream!</p>
-  <img align="center" src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <center><img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+   
  <p>When you are done with your ice cream please take the survey below.</p>
 </body>
  
