--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
   <h1>OoFALLENoO</h1>
-  <p>Welcome to my website! Enjoy some dancing ice cream!</p>
+  <center><p>Welcome to my website! Enjoy some dancing ice cream!</p>
   <center><img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
    
  <p>When you are done with your ice cream please take the survey below.</p>
