--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- If we remove this, every thing will move to the left of the page-->
 <div align="center">
 <!--Adds a heading to the form-->
-<h2>Interests Survey form</h2>
+<h2>Coding Interests Survey form</h2>
  <h4>Enter your name:</h4>
 <!-- Input type text for small texts, specify size -->
 <input type="text" name="UserName" size=35 maxlength=35 value="">
@@ -27,16 +27,16 @@
 </br></br>
    <h4>Enter your occupation:</h4>
 <input type="text" name="Dept" size=35 maxlength=35 value=""> </br> </br>
-<h4>Tell us a little about yourself:</h4>
+<h4>What is your favorite coding project you've made and why?</h4>
 <!-- For writing lot of text like descriptions with text wrapping,
 if you dont want text wrapping, you can add wrap = "off" (horizontal scrollbar -->
 <textarea name="Comments" cols=30 rows=4></textarea> </br> </br>
-<h4>Do you exercise at home?</h4>
+<h4>Do you code for a living?</h4>
 <!-- Radio buttons help you choose one out of the many values -->
 <input type="radio" name="exe" color=white value=1>Yes
 <input type="radio" name="exe" color=white value=2>No
 </p>
-<h4>How do you like to read about your favorite topics?</h4>
+<h4>How do you like to learn about coding updates?</h4>
 <p>
 <!--Checkbox lets you select multiple options -->
 <input type="checkbox" name="Books">Books
@@ -44,16 +44,18 @@ if you dont want text wrapping, you can add wrap = "off" (horizontal scrollbar -
 <input type="checkbox" name="Phone">Phone apps
 <input type="checkbox" name="Magazines">Magazines
 </p>
-<h4>What genre of movies do you like?</h4>
+<h4>What is your favorite coding language?</h4>
 <!--Select box lets you choose one of the multiple dropdown options-->
 <select name="moviepref" ><option>
-<option value=1 selected = "true">comedy
-<option value=2 >romance
-<option value=3 >thriller
-<option value=4 >horror
-<option value=5 >biopic
-<option value=6 >action
-<option value=7 >drama 
+<option value=1 selected = "true">HTML
+<option value=2 >Python
+<option value=3 >Java
+<option value=4 >C++
+<option value=5 >Java Script
+<option value=6 >Swift
+<option value=7 >C#
+<option value=8 >Ruby
+<option value=9 >SQL 
 </select>
 </br></br>
 <!--submits the information entered in the form by the user -->
