--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ if you dont want text wrapping, you can add wrap = "off" (horizontal scrollbar -
 <input type="radio" name="exe" color=white value=1>Yes
 <input type="radio" name="exe" color=white value=2>No
 </p>
-<h4>How do you like to learn about coding updates?</h4>
+<h4>How do you like to learn coding?</h4>
 <p>
 <!--Checkbox lets you select multiple options -->
 <input type="checkbox" name="Books">Books
@@ -56,6 +56,8 @@ if you dont want text wrapping, you can add wrap = "off" (horizontal scrollbar -
 <option value=7 >C#
 <option value=8 >Ruby
 <option value=9 >SQL 
+<option value=10 >Bash
+<option value=11 >Other 
 </select>
 </br></br>
 <!--submits the information entered in the form by the user -->
